--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>MamaMeet — Get the App</title>
 
-  <!-- Google Analytics -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KYKR8WMJP"></script>
+  <!-- Google Analytics (Web stream) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-9DB4PHK5LB"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-5KYKR8WMJP');
+    gtag('config', 'G-9DB4PHK5LB');
   </script>
 </head>
 <body>
@@ -54,4 +54,3 @@
   </noscript>
 </body>
 </html>
-
