--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>MamaMeet Redirect</title>
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9DB4PHK5LB"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5KYKR8WMJP"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-9DB4PHK5LB');
+      gtag('config', 'G-5KYKR8WMJP');
     </script>
 
     <script>
